--- a/css/style.css
+++ b/css/style.css
@@ -91,21 +91,37 @@ body {}
 .thumb-images img {
     width: 100%;
 }
+footer {
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
 .footer-section {
     width: 0 auto;
     display: block;
     justify-content: space-between;
+   
 }
 .flex{
     display: flex;
     width: 0 aut0;
     font-size: 10px;
-    justify-content: space-between;
-    align-items: center;
-    text-align: left;
+    justify-content: space-around;
+    align-items: center; 
+}
+.flex  nav a {
+    border-right:1px solid #807c7c;
+    padding-right: 5px;
+    
 }
 
-.flex span {
-  font-size: 10px;  
-  text-align: left;
+footer p  {
+  display: flex;
+  font-size: 16px; 
+  align-items: center; 
+  font-size: 10px;
+
+}
+footer p a {
+    border-: ;
 }
