Completed footer section

--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,8 @@
 
 html {
   font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
+  background-color: #fff;
 }
-
-body {}
 
 /* Jumbotron */
 .jumbotron {
@@ -24,13 +23,13 @@ body {}
   color: #fff;
 }
 
-.nav {
+.header-nav {
   display: flex;
   margin-top: 5rem;
   margin-bottom: 2rem;
 }
 
-.nav .nav-item {
+.header-nav .nav-item {
   color: #fff;
   padding: 0.4rem 2rem;
   text-decoration: none;
@@ -40,16 +39,16 @@ body {}
   border: 1px solid #505050;
 }
 
-.nav .nav-item:not(:last-child):hover {
+.header-nav .nav-item:not(:last-child):hover {
   background-image: linear-gradient(#454545 50%, #5c5959 50%);
 }
 
-.nav .nav-item:first-child {
+.header-nav .nav-item:first-child {
   border-radius: 3px 0 0 3px;
   font-size: 22px;
 }
 
-.nav .nav-item:last-child {
+.header-nav .nav-item:last-child {
   border-radius: 0 3px 3px 0;
   padding-left: 1rem;
   padding-right: 1rem;
@@ -83,45 +82,47 @@ body {}
 .play-film:active {
   text-decoration: underline;
 }
+
 /* thumb-nail-images */
-.thumb-images{
-   display: grid;
-  grid-template-columns: repeat(4,1fr);
+.thumb-images {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
+
 .thumb-images img {
-    width: 100%;
-}
-footer {
-    padding-left: 5%;
-    padding-right: 5%;
+  width: 100%;
 }
 
-.footer-section {
-    width: 0 auto;
-    display: block;
-    justify-content: space-between;
-   
-}
-.flex{
-    display: flex;
-    width: 0 aut0;
-    font-size: 10px;
-    justify-content: space-around;
-    align-items: center; 
-}
-.flex  nav a {
-    border-right:1px solid #807c7c;
-    padding-right: 5px;
-    
-}
-
-footer p  {
+.flex {
   display: flex;
-  font-size: 16px; 
-  align-items: center; 
-  font-size: 10px;
-
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0.8rem;
 }
-footer p a {
-    border-: ;
+
+.flex nav a:not(:last-child) {
+  border-right: 1px solid #807c7c;
+}
+
+/* Footer */
+footer {
+  padding: 2rem 10rem;
+  font-size: 10px;
+}
+
+footer a,
+footer a:visited {
+  padding-right: 5px;
+  color: #0088cc;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
+footer p {
+  display: flex;
+  align-items: center;
 }
