--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,28 @@ html {
   background-color: #fff;
 }
 
+/* Footer */
+footer {
+  padding: 2rem 10rem;
+  font-size: 10px;
+}
+
+footer a,
+footer a:visited {
+  padding-right: 5px;
+  color: #08c;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
+footer p {
+  display: flex;
+  align-items: center;
+}
+
 /* Jumbotron */
 .jumbotron {
   height: 540px;
@@ -33,14 +55,10 @@ html {
   color: #fff;
   padding: 0.4rem 2rem;
   text-decoration: none;
-  background-image: linear-gradient(#6A6A6A 50%, #807c7c 50%);
+  background-image: linear-gradient(#6a6a6a 50%, #807c7c 50%);
   font-size: 14px;
   line-height: 18px;
   border: 1px solid #505050;
-}
-
-.header-nav .nav-item:not(:last-child):hover {
-  background-image: linear-gradient(#454545 50%, #5c5959 50%);
 }
 
 .header-nav .nav-item:first-child {
@@ -52,6 +70,10 @@ html {
   border-radius: 0 3px 3px 0;
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.header-nav .nav-item:not(:last-child):hover {
+  background-image: linear-gradient(#454545 50%, #5c5959 50%);
 }
 
 .form-control {
@@ -103,26 +125,4 @@ html {
 
 .flex nav a:not(:last-child) {
   border-right: 1px solid #807c7c;
-}
-
-/* Footer */
-footer {
-  padding: 2rem 10rem;
-  font-size: 10px;
-}
-
-footer a,
-footer a:visited {
-  padding-right: 5px;
-  color: #0088cc;
-  text-decoration: none;
-}
-
-footer a:hover {
-  text-decoration: underline;
-}
-
-footer p {
-  display: flex;
-  align-items: center;
 }
